@@ -46,6 +46,7 @@ advanced {
         reccomplex:inventory_generation_component_tag
         forge:bucketfilled:grapejuice;
         familiarfauna:ff_icon
+        earthworks:item_chalk
         reccomplex:book_generation_tag
         reccomplex:generic_space
         botania:elementiumhelmreveal
