@@ -118,18 +118,7 @@
 	{
 		"block": "earthworks:block_chalk:0",
 		"distrib": "0,0.0;44,0.0;45,1.015625E-4;46,1.9921875E-4;47,4.8046876E-4;48,6.484375E-4;49,5.15625E-4;50,4.140625E-4;51,3.515625E-4;52,5.234375E-4;53,7.734375E-4;54,8.515625E-4;55,8.59375E-4;56,7.5E-4;57,6.757812E-4;58,5.78125E-4;59,4.21875E-4;60,3.9453126E-4;61,4.53125E-4;62,4.765625E-4;63,4.6875E-4;64,1.484375E-4;65,1.4453125E-4;66,1.7578126E-4;67,1.640625E-4;68,1.2890625E-4;69,9.375E-5;70,8.203125E-5;71,1.1328125E-4;72,1.5625E-4;73,1.2890625E-4;74,1.2890625E-4;75,1.0546875E-4;76,6.25E-5;77,8.203125E-5;78,7.421875E-5;79,6.640625E-5;80,8.984375E-5;81,7.421875E-5;82,8.984375E-5;83,8.984375E-5;84,4.6875E-5;85,3.125E-5;86,7.8125E-6;87,7.8125E-6;88,3.90625E-6;89,1.5625E-5;90,7.8125E-5;91,7.421875E-5;92,8.203125E-5;93,2.34375E-5;94,7.8125E-6;95,0.0;102,0.0;103,2.34375E-5;104,3.125E-5;105,1.953125E-5;106,0.0;107,3.90625E-6;108,3.90625E-6;109,0.0;111,0.0;112,7.8125E-6;113,1.171875E-5;114,0.0;",
-		"silktouch": true,
-		"dropsList": [
-			{
-				"itemStack": "earthworks:item_chalk:0",
-				"fortunes": {
-					"0": 3.5058,
-					"1": 4.0071,
-					"2": 4.5169,
-					"3": 5.0208
-				}
-			}
-		],
+		"silktouch": false,
 		"dim": "overworld"
 	},
 	{
